# fandomforge-engine

./: .gitignore  CLAUDE.md  NOTES.md  README.md  package.json  pnpm-lock.yaml
tools/: README.md  pyproject.toml
tools/fandomforge/: __init__.py  autopilot.py  cli.py  config.py  credits.py  doctor.py  ingest.py  library.py  master_pipeline.py  regress.py  review.py  validation.py
tools/fandomforge/assembly/: __init__.py  assemble.py  audio_engine.py  bin_layout.py  capcut_project.py  color.py  color_plan.py  dialogue.py  export_presets.py  fcp_project.py  media_manifest.py  mixer.py  orchestrator.py  (+10 more)
tools/tests/: test_arc_architect.py  test_aspect_ratio.py  test_autopilot.py  test_beat.py  test_clip_categories.py  test_clip_metadata.py  test_color_grade_confidence.py  test_complement_matcher.py  test_config_loading.py  test_copyright_guardrails.py  test_corpus_expansion.py  test_corrections_integration.py  test_corrections_journal.py  test_densify.py  test_densify_head.py  test_dialogue_narrative.py  test_dialogue_windows.py  test_download.py  test_edit_classifier.py  test_emotion_arc.py  test_energy_zones.py  test_export_projects.py  test_forensic_craft_bias.py  test_high_energy_reclassifier.py  test_ingest.py  test_integration_real_media.py  test_intent_classifier.py  test_legacy_priors_migrator.py  test_legal_sources.py  test_leon_smoke.py  test_library.py  test_matchers.py  test_mixer.py  test_mixer_integration.py  test_ml_hooks.py  test_orchestrator.py  test_orchestrator_daemon.py  test_outcome_aggregator.py  test_persistent_jobs.py  test_psych_proxies.py  (+30 more)
(+613 files in other folders)
